# microllm

./: .gitignore  README.md  model.py  pyproject.toml  requirements.txt
file_type/: gguf.py  gguf_v2.py
microllm/: decry.py  llama.py  main.py  model.py  phi_model.py  read_gguf.py  test.py  test_tensor_move.py  tokenizer.py  transformer.py
microllm/file_type/: gguf.py  gguf2.py  read_gguf.py
model/: main.py
