[tool.poetry]
name = "microllm"
version = "0.0.0"
description = "Inference using tinygrad and guff files"
authors = ["Anton Solbjørg <4324290+Notnaton@users.noreply.github.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.4"
numpy = "^1.26.4"
tinygrad = {git = "https://github.com/tinygrad/tinygrad.git"}
devtools = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^8.1.1"

[tool.poetry.scripts]
microllm = "microllm.main:main"